# n-body-problem

./: CMakeLists.txt  LICENSE  Makefile  README.md
config/: n-body-problem.conf
models/: orbits.simsetup  solar.simsetup
scenes/: 4 massives.simsetup  solar.1.simsetup  solar.simsetup
src/: abstract_body.cpp  abstract_body.h  body.cc  body.cpp  body.h  gravity_simulation.cpp  gravity_simulation.h  main.cc  main.cpp  model_generator.cpp  nbp_gui.cc  nbp_gui.cpp  nbp_gui.h  scene_generator.cc  scene_generator.cpp
src/physics/: abstract_body.cc  abstract_body.h  gravity_simulation.cc  gravity_simulation.h
